# aw-watcher-afk-barrier

./: Makefile  README.md  aw-watcher-afk-barrier.spec  pyproject.toml
aw_watcher_afk_barrier/: __main__.py  afk.py  config.py
